# diskiller

./: .gitignore  .gitmodules  CMakeLists.txt  build.ninja  build.ninja.jinja
src/: main.cpp
test/: play_simple.txt  quit.txt  survival1.txt
